<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Symphony Timer</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_item">Add Timer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="label_title">Title</string>
    <string name="label_time">Time</string>
    <string name="label_time_hours">Hours</string>
    <string name="label_time_minutes">Minutes</string>
    <string name="label_time_seconds">Seconds</string>
    <string name="label_sound">Sound</string>
    <string name="label_image">Image</string>
    <string name="default_sound">Default sound</string>
    <string name="image_selection">Image selection</string>
    <string name="image_default_content_description">Icon</string>
    <string name="clear">Clear</string>
    <string name="caption_ok">OK</string>
    <string name="caption_cancel">Cancel</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_move_up">Move up</string>
    <string name="action_move_down">Move down</string>
    <string name="action_preferences">Preferences</string>
    <string name="pref_cat_settings">Application Settings</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_bitmap_background">Bitmap background</string>
    <string name="pref_bitmap_background_summary">Disable for minimum resource consumption</string>
    <string name="pref_reset_data">Reset data</string>
    <string name="pref_cat_local_backup">Local backup</string>
    <string name="pref_cat_summary_local_backup">Backup to local SD card</string>    
    <string name="pref_backup">Backup</string>
    <string name="pref_summary_backup">Backup current data to local SD card</string>    
    <string name="pref_restore">Restore</string>
    <string name="pref_summary_restore">Restore current data from local SD card</string>
    <string name="pref_cat_dropbox_backup">DropBox backup</string>
    <string name="error_saving_timer">Error saving timer: %s</string>
    <string name="error_title_not_assigned">Title not assigned</string>
    <string name="error_time_zero">Time is zero</string>
    <string name="error_playing_sound">Error playing sound : %s</string>
    <string name="error_load_local_backup">Error loading local backup, code = %s</string>
    <string name="info_load_local_backup">Local backup has been restored successfully</string>
    <string name="action_not_allowed">This operation is not allowed</string>
    <string name="question_are_you_sure">Are you sure?</string>
    <string name="title_activity_image_selection">ImageSelectionActivity</string>
    <string name="title_activity_history">History</string>
    <string name="tab_history_list">List</string>
    <string name="tab_history_top">Top</string>

</resources>
