<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory
	    android:title="@string/pref_cat_settings" 
	    >    
		<CheckBoxPreference
		    android:key="pref_vibrate"
		    android:title="@string/pref_vibrate"
		    android:defaultValue="true" 
		    />
		<Preference 
	        android:key="pref_reset_data"
	        android:title="@string/pref_reset_data"
	        android:selectable="true"
        >
        </Preference>           
	</PreferenceCategory>
	<PreferenceCategory
	    android:title="@string/pref_cat_local_backup" 
	    >
	    <Preference 
	        android:key="pref_local_backup"
	        android:title="@string/pref_backup"
	        android:selectable="true"
	        >        
	    </Preference>
	    <Preference 
	        android:key="pref_local_restore"
	        android:title="@string/pref_restore"
	        android:selectable="true"
	        >        
	    </Preference>    
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_dropbox_backup"
        >
	    <Preference 
	        android:key="pref_dropbox_backup"
	        android:title="@string/pref_backup"
	        android:selectable="true"
	        >        
	    </Preference>
	    <Preference 
	        android:key="pref_dropbox_restore"
	        android:title="@string/pref_restore"
	        android:selectable="true"
	        >        
	    </Preference>  
    </PreferenceCategory>

</PreferenceScreen>
