<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:symphonytimer="http://schemas.android.com/apk/res-auto" >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_add"
          android:icon="@android:drawable/ic_input_add"
          android:title="@string/action_add"
          symphonytimer:showAsAction="ifRoom"  />
    <item
        android:id="@+id/action_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_preferences"
        symphonytimer:showAsAction="ifRoom" />
	<item
        android:id="@+id/action_history"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/action_history"
        symphonytimer:showAsAction="ifRoom" />    
    
</menu>
